lang/flex/fb_practice/fb4-1.output
Terminals unused in grammar

   ADD
   ALTER
   ANALYZE
   BEFORE
   CALL
   CASSADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CURRENT_USER
   CURSOR
   DATABASES
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DIV
   DROP
   DUAL
   EACH
   ELSEIF
   ESCAPED
   EXIT
   EXPLAIN
   FETCH
   FOREIGN
   GRANT
   INFILE
   INOUT
   INSENSITIVE
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LOOP
   MATCH
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SSL
   STARTING
   TERMIMATED
   TO
   TRIGGER
   UNDO
   UNION
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARYING
   WHILE
   WRITE


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'
    3          | error ';'
    4          | stmt_list error ';'

    5 expr: NAME
    6     | NAME '.' NAME
    7     | USERVAR
    8     | STRING
    9     | INTNUM
   10     | APPROXNUM
   11     | BOOL
   12     | expr '+' expr
   13     | expr '-' expr
   14     | expr '*' expr
   15     | expr '/' expr
   16     | expr '%' expr
   17     | expr MOD expr
   18     | '-' expr
   19     | expr ANDOP expr
   20     | expr OR expr
   21     | expr XOR expr
   22     | expr '|' expr
   23     | expr '&' expr
   24     | expr '^' expr
   25     | expr SHIFT expr
   26     | NOT expr
   27     | '!' expr
   28     | expr COMPARISON expr
   29     | expr COMPARISON '(' select_stmt ')'
   30     | expr COMPARISON ANY '(' select_stmt ')'
   31     | expr COMPARISON SOME '(' select_stmt ')'
   32     | expr COMPARISON ALL '(' select_stmt ')'
   33     | expr IS NULLX
   34     | expr IS NOT NULLX
   35     | expr IS BOOL
   36     | expr IS NOT BOOL
   37     | USERVAR ASSIGN expr
   38     | expr BETWEEN expr AND expr

   39 val_list: expr
   40         | expr ',' val_list

   41 opt_val_list: /* empty */
   42             | val_list

   43 expr: expr IN '(' val_list ')'
   44     | expr NOT IN '(' val_list ')'
   45     | expr IN '(' select_stmt ')'
   46     | expr NOT IN '(' select_stmt ')'
   47     | EXISTS '(' select_stmt ')'
   48     | NAME '(' opt_val_list ')'
   49     | FCOUNT '(' '*' ')'
   50     | FCOUNT '(' expr ')'
   51     | FSUBSTRING '(' val_list ')'
   52     | FSUBSTRING '(' expr FROM expr ')'
   53     | FTRIM '(' val_list ')'
   54     | FTRIM '(' trim_ltb expr FROM val_list ')'

   55 trim_ltb: LEADING
   56         | TRAILING
   57         | BOTH

   58 expr: FDATE_ADD '(' expr ',' interval_exp ')'
   59     | FDATE_SUB '(' expr ',' interval_exp ')'

   60 interval_exp: INTERVAL expr DAY_HOUR
   61             | INTERVAL expr DAY_MICROSECOND
   62             | INTERVAL expr DAY_MINUTE
   63             | INTERVAL expr DAY_SECOND
   64             | INTERVAL expr YEAR_MONTH
   65             | INTERVAL expr YEAR
   66             | INTERVAL expr HOUR_MICROSECOND
   67             | INTERVAL expr HOUR_MINUTE
   68             | INTERVAL expr HOUR_SECOND

   69 expr: CASE expr case_list END
   70     | CASE expr case_list ELSE expr END
   71     | CASE case_list END
   72     | CASE case_list ELSE expr END

   73 case_list: WHEN expr THEN expr
   74          | case_list WHEN expr THEN expr

   75 expr: expr LIKE expr
   76     | expr NOT LIKE expr
   77     | expr REGEXP expr
   78     | expr NOT REGEXP expr
   79     | CURRENT_TIMESTAMP
   80     | CURRENT_DATE
   81     | CURRENT_TIME
   82     | BINARY expr

   83 stmt: select_stmt

   84 select_stmt: SELECT select_opts select_expr_list
   85            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   86 opt_where: /* empty */
   87          | WHERE expr

   88 opt_groupby: /* empty */
   89            | GROUP BY groupby_list opt_with_rollup

   90 groupby_list: expr opt_asc_desc
   91             | groupby_list ',' expr opt_asc_desc

   92 opt_asc_desc: /* empty */
   93             | ASC
   94             | DESC

   95 opt_with_rollup: /* empty */
   96                | WITH ROLLUP

   97 opt_having: /* empty */
   98           | HAVING expr

   99 opt_orderby: /* empty */
  100            | ORDER BY groupby_list

  101 opt_limit: /* empty */
  102          | LIMIT expr ',' expr
  103          | LIMIT expr

  104 opt_into_list: /* empty */
  105              | INTO column_list

  106 column_list: NAME
  107            | column_list ',' NAME

  108 select_opts: /* empty */
  109            | select_opts ALL
  110            | select_opts DISTINCT
  111            | select_opts DISTINCTROW
  112            | select_opts HIGH_PRIORITY
  113            | select_opts STRAIGHT_JOIN
  114            | select_opts SQL_SMALL_RESULT
  115            | select_opts SQL_BIG_RESULT
  116            | select_opts SQL_CALL_FOUND_ROWS

  117 select_expr_list: select_expr
  118                 | select_expr_list ',' select_expr
  119                 | '*'
  120                 | NAME '.' '*'

  121 select_expr: expr opt_as_alias

  122 opt_as_alias: /* empty */
  123             | AS NAME
  124             | NAME

  125 table_references: table_reference
  126                 | table_references ',' table_reference

  127 table_reference: table_factor
  128                | join_table

  129 table_factor: NAME opt_as_alias index_hint
  130             | NAME '.' NAME opt_as_alias index_hint
  131             | table_subquery opt_as NAME
  132             | '(' table_references ')'

  133 opt_as: AS
  134       | /* empty */

  135 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  136           | table_reference STRAIGHT_JOIN table_factor
  137           | table_reference STRAIGHT_JOIN table_factor ON expr
  138           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  139           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  140 opt_inner_cross: /* empty */
  141                | INNER
  142                | CROSS

  143 opt_outer: /* empty */
  144          | OUTER

  145 left_or_right: LEFT
  146              | RIGHT

  147 opt_left_or_right_outer: /* empty */
  148                        | LEFT opt_outer
  149                        | RIGHT opt_outer

  150 opt_join_condition: /* empty */
  151                   | join_condition

  152 join_condition: ON expr
  153               | USING '(' column_list ')'

  154 index_hint: /* empty */
  155           | USE KEY opt_for_join '(' index_list ')'
  156           | IGNORE KEY opt_for_join '(' index_list ')'
  157           | FORCE KEY opt_for_join '(' index_list ')'

  158 opt_for_join: FOR JOIN
  159             | /* empty */

  160 index_list: NAME
  161           | index_list ',' NAME

  162 table_subquery: '(' select_stmt ')'

  163 stmt: delete_stmt

  164 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  165 delete_opts: delete_opts LOW_PRIORITY
  166            | delete_opts QUICK
  167            | delete_opts IGNORE
  168            | /* empty */

  169 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  170 delete_list: NAME opt_dot_star
  171            | delete_list ',' NAME opt_dot_star

  172 opt_dot_star: /* empty */
  173             | '.' '*'

  174 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  175 stmt: insert_stmt

  176 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  177 opt_ondupupdate: /* empty */
  178                | ONDUPLICATE KEY UPDATE insert_asgn_list

  179 insert_opts: /* empty */
  180            | insert_opts LOW_PRIORITY
  181            | insert_opts DELAYED
  182            | insert_opts HIGH_PRIORITY
  183            | insert_opts IGNORE

  184 opt_into: INTO
  185         | /* empty */

  186 opt_col_names: /* empty */
  187              | '(' column_list ')'

  188 insert_vals_list: '(' insert_vals ')'
  189                 | insert_vals_list ',' '(' insert_vals ')'

  190 insert_vals: expr
  191            | DEFAULT
  192            | insert_vals ',' expr
  193            | insert_vals ',' DEFAULT

  194 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  195 insert_asgn_list: NAME COMPARISON expr
  196                 | NAME COMPARISON DEFAULT
  197                 | insert_asgn_list ',' NAME COMPARISON expr
  198                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  199 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  200 stmt: replace_stmt

  201 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  202             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  203             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  204 stmt: update_stmt

  205 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  206 update_opts: /* empty */
  207            | insert_opts LOW_PRIORITY
  208            | insert_opts IGNORE

  209 update_asgn_list: NAME COMPARISON expr
  210                 | NAME '.' NAME COMPARISON expr
  211                 | update_asgn_list ',' NAME COMPARISON expr
  212                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  213 stmt: create_database_stmt

  214 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  215                     | CREATE SCHEMA opt_if_not_exists NAME

  216 opt_if_not_exists: /* empty */
  217                  | IF EXISTS

  218 stmt: create_table_stmt

  219 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  220                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  221                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  223                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  224                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  225 opt_temporary: /* empty */
  226              | TEMPORARY

  227 create_col_list: create_definition
  228                | create_col_list ',' create_definition

  229 create_definition: PRIMARY KEY '(' column_list ')'
  230                  | KEY '(' column_list ')'
  231                  | FULLTEXT KEY '(' column_list ')'
  232                  | /* empty */
  233                  | NAME data_type column_atts

  234 column_atts: /* empty */
  235            | column_atts NOT NULLX
  236            | column_atts NULLX
  237            | column_atts DEFAULT STRING
  238            | column_atts DEFAULT INTNUM
  239            | column_atts DEFAULT APPROXNUM
  240            | column_atts DEFAULT BOOL
  241            | column_atts AUTO_INCREMENT
  242            | column_atts UNIQUE '(' column_list ')'
  243            | column_atts UNIQUE KEY
  244            | column_atts KEY
  245            | column_atts COMMENT STRING

  246 opt_length: /* empty */
  247           | '(' INTNUM ')'
  248           | '(' INTNUM ',' INTNUM ')'

  249 opt_binary: /* empty */
  250           | BINARY

  251 opt_uz: /* empty */
  252       | opt_uz UNSIGNED
  253       | opt_uz ZEROFILL

  254 opt_csc: /* empty */
  255        | opt_csc CHAR SET STRING
  256        | opt_csc COLLATE STRING

  257 data_type: BIT opt_length
  258          | TINYINT opt_length opt_uz
  259          | SMALLINT opt_length opt_uz
  260          | MEDIUMINT opt_length opt_uz
  261          | INTEGER opt_length opt_uz
  262          | BIGINT opt_length opt_uz
  263          | REAL opt_length opt_uz
  264          | DOUBLE opt_length opt_uz
  265          | FLOAT opt_length opt_uz
  266          | DECIMAL opt_length opt_uz
  267          | DATE
  268          | TIME
  269          | TIMESTAMP
  270          | DATETIME
  271          | YEAR
  272          | CHAR opt_length opt_csc
  273          | VARCHAR '(' INTNUM ')' opt_csc
  274          | BINARY opt_length
  275          | VARBINARY '(' INTNUM ')'
  276          | TINYBLOB
  277          | BLOB
  278          | MEDIUMBLOB
  279          | LONGBLOB
  280          | TINYTEXT opt_binary opt_csc
  281          | TEXT opt_binary opt_csc
  282          | MEDIUMTEXT opt_binary opt_csc
  283          | LONGTEXT opt_binary opt_csc
  284          | ENUM '(' enum_list ')' opt_csc
  285          | SET '(' enum_list ')' opt_csc

  286 enum_list: STRING
  287          | enum_list ',' STRING

  288 create_select_statement: opt_ignore_replace opt_as select_stmt

  289 opt_ignore_replace: /* empty */
  290                   | IGNORE
  291                   | REPLACE

  292 stmt: set_stmt

  293 set_stmt: SET set_list

  294 set_list: set_expr
  295         | set_list ',' set_expr

  296 set_expr: USERVAR COMPARISON expr
  297         | USERVAR ASSIGN expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 27
'%' (37) 16
'&' (38) 23
'(' (40) 29 30 31 32 43 44 45 46 47 48 49 50 51 52 53 54 58 59 132
    153 155 156 157 162 187 188 189 219 220 221 222 229 230 231 242
    247 248 273 275 284 285
')' (41) 29 30 31 32 43 44 45 46 47 48 49 50 51 52 53 54 58 59 132
    153 155 156 157 162 187 188 189 219 220 221 222 229 230 231 242
    247 248 273 275 284 285
'*' (42) 14 49 119 120 173
'+' (43) 12
',' (44) 40 58 59 91 102 107 118 126 161 171 189 192 193 197 198 211
    212 228 248 287 295
'-' (45) 13 18
'.' (46) 6 120 130 173 210 212 220 222 224
'/' (47) 15
';' (59) 1 2 3 4
'^' (94) 24
'|' (124) 22
error (256) 3 4
NAME (258) 5 6 48 106 107 120 123 124 129 130 131 160 161 164 170 171
    176 194 195 196 197 198 199 201 202 203 209 210 211 212 214 215
    219 220 221 222 223 224 233
STRING (259) 8 237 245 255 256 286 287
INTNUM (260) 9 238 247 248 273 275
BOOL (261) 11 35 36 240
APPROXNUM (262) 10 239
USERVAR (263) 7 37 296 297
ASSIGN (264) 37 297
OR (265) 20
XOR (266) 21
ANDOP (267) 19
REGEXP (268) 77 78
LIKE (269) 75 76
IS (270) 33 34 35 36
IN (271) 43 44 45 46
NOT (272) 26 34 36 44 46 76 78 235
BETWEEN (273) 38
COMPARISON (274) 28 29 30 31 32 195 196 197 198 209 210 211 212 296
SHIFT (275) 25
MOD (276) 17
UMINUS (277)
ADD (278)
ALL (279) 32 109
ALTER (280)
ANALYZE (281)
AND (282) 38
ANY (283) 30
AS (284) 123 133
ASC (285) 93
AUTO_INCREMENT (286) 241
BEFORE (287)
BIGINT (288) 262
BINARY (289) 82 250 274
BIT (290) 257
BLOB (291) 277
BOTH (292) 57
BY (293) 89 100
CALL (294)
CASSADE (295)
CASE (296) 69 70 71 72
CHANGE (297)
CHAR (298) 255 272
CHECK (299)
COLLATE (300) 256
COLUMN (301)
COMMENT (302) 245
CONDITION (303)
CONSTRAINT (304)
CONTINUE (305)
CONVERT (306)
CREATE (307) 214 215 219 220 221 222 223 224
CROSS (308) 142
CURRENT_DATE (309) 80
CURRENT_TIME (310) 81
CURRENT_TIMESTAMP (311) 79
CURRENT_USER (312)
CURSOR (313)
DATABASE (314) 214
DATABASES (315)
DATE (316) 267
DATETIME (317) 270
DAY_HOUR (318) 60
DAY_MICROSECOND (319) 61
DAY_MINUTE (320) 62
DAY_SECOND (321) 63
DECIMAL (322) 266
DECLARE (323)
DEFAULT (324) 191 193 196 198 237 238 239 240
DELAYED (325) 181
DELETE (326) 164 169 174
DESC (327) 94
DESCRIBE (328)
DETERMINISTIC (329)
DISTINCT (330) 110
DISTINCTROW (331) 111
DIV (332)
DOUBLE (333) 264
DROP (334)
DUAL (335)
EACH (336)
ELSE (337) 70 72
ELSEIF (338)
END (339) 69 70 71 72
ENUM (340) 284
ESCAPED (341)
EXISTS (342) 47 217
EXIT (343)
EXPLAIN (344)
FETCH (345)
FLOAT (346) 265
FOR (347) 158
FORCE (348) 157
FOREIGN (349)
FROM (350) 52 54 85 164 169 174
FULLTEXT (351) 231
GRANT (352)
GROUP (353) 89
HAVING (354) 98
HIGH_PRIORITY (355) 112 182
HOUR_MICROSECOND (356) 66
HOUR_MINUTE (357) 67
HOUR_SECOND (358) 68
IF (359) 217
IGNORE (360) 156 167 183 208 290
INFILE (361)
INNER (362) 141
INOUT (363)
INSENSITIVE (364)
INSERT (365) 176 194 199
INTEGER (366) 261
INTERVAL (367) 60 61 62 63 64 65 66 67 68
INTO (368) 105 184
ITERATE (369)
JOIN (370) 135 138 139 158
KEY (371) 155 156 157 178 229 230 231 243 244
KEYS (372)
KILL (373)
LEADING (374) 55
LEAVE (375)
LEFT (376) 145 148
LIMIT (377) 102 103
LINES (378)
LOAD (379)
LOCALTIME (380)
LOCALTIMESTAMP (381)
LOCK (382)
LONG (383)
LONGBLOB (384) 279
LONGTEXT (385) 283
LOOP (386)
LOW_PRIORITY (387) 165 180 207
MATCH (388)
MEDIUMBLOB (389) 278
MEDIUMINT (390) 260
MEDIUMTEXT (391) 282
MINUTE_MICROSECOND (392)
MINUTE_SECOND (393)
MODIFIES (394)
NATURAL (395) 139
NO_WRITE_TO_BINLOG (396)
NULLX (397) 33 34 235 236
NUMBER (398)
ON (399) 137 152
ONDUPLICATE (400) 178
OPTIMIZE (401)
OPTION (402)
OPTIONALLY (403)
ORDER (404) 100
OUT (405)
OUTER (406) 144
OUTFILE (407)
PRECISION (408)
PRIMARY (409) 229
PROCEDURE (410)
PURGE (411)
QUICK (412) 166
READ (413)
READS (414)
REAL (415) 263
REFERENCES (416)
RELEASE (417)
RENAME (418)
REPEAT (419)
REPLACE (420) 201 202 203 291
REQUIRE (421)
RESTRICT (422)
RETURN (423)
REVOKE (424)
RIGHT (425) 146 149
ROLLUP (426) 96
SCHEMA (427) 215
SCHEMAS (428)
SECOND_MICROSECOND (429)
SELECT (430) 84 85
SENSITIVE (431)
SEPARATOR (432)
SET (433) 194 202 205 255 285 293
SHOW (434)
SMALLINT (435) 259
SOME (436) 31
SONAME (437)
SPATIAL (438)
SPECIFIC (439)
SQL (440)
SQLEXCEPTION (441)
SQLSTATE (442)
SQLWARNING (443)
SQL_BIG_RESULT (444) 115
SQL_CALL_FOUND_ROWS (445) 116
SQL_SMALL_RESULT (446) 114
SSL (447)
STARTING (448)
STRAIGHT_JOIN (449) 113 136 137
TABLE (450) 219 220 221 222 223 224
TEMPORARY (451) 226
TERMIMATED (452)
TEXT (453) 281
THEN (454) 73 74
TIME (455) 268
TIMESTAMP (456) 269
TINYINT (457) 258
TINYTEXT (458) 280
TINYBLOB (459) 276
TO (460)
TRAILING (461) 56
TRIGGER (462)
UNDO (463)
UNION (464)
UNIQUE (465) 242 243
UNLOCK (466)
UNSIGNED (467) 252
UPDATE (468) 178 205
USAGE (469)
USE (470) 155
USING (471) 153 174
UTC_DATE (472)
UTC_TIME (473)
UTC_TIMESTAMP (474)
VALUES (475) 176 201
VARBINARY (476) 275
VARCHAR (477) 273
VARYING (478)
WHEN (479) 73 74
WHERE (480) 87
WHILE (481)
WITH (482) 96
WRITE (483)
YEAR (484) 65 271
YEAR_MONTH (485) 64
ZEROFILL (486) 253
FSUBSTRING (487) 51 52
FTRIM (488) 53 54
FDATE_ADD (489) 58
FDATE_SUB (490) 59
FCOUNT (491) 49 50


Nonterminals, with rules where they appear

$accept (251)
    on left: 0
stmt_list (252)
    on left: 1 2 3 4, on right: 0 2 4
expr (253)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 28 29 30 31 32 33 34 35 36 37 38 43 44 45 46 47 48 49
    50 51 52 53 54 58 59 69 70 71 72 75 76 77 78 79 80 81 82, on right:
    12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 43 44 45 46 50 52 54 58 59 60 61 62 63
    64 65 66 67 68 69 70 72 73 74 75 76 77 78 82 87 90 91 98 102 103
    121 137 152 190 192 195 197 209 210 211 212 296 297
val_list (254)
    on left: 39 40, on right: 40 42 43 44 51 53 54
opt_val_list (255)
    on left: 41 42, on right: 48
trim_ltb (256)
    on left: 55 56 57, on right: 54
interval_exp (257)
    on left: 60 61 62 63 64 65 66 67 68, on right: 58 59
case_list (258)
    on left: 73 74, on right: 69 70 71 72 74
stmt (259)
    on left: 83 163 175 200 204 213 218 292, on right: 1 2
select_stmt (260)
    on left: 84 85, on right: 29 30 31 32 45 46 47 83 162 199 203 288
opt_where (261)
    on left: 86 87, on right: 85 164 169 174 205
opt_groupby (262)
    on left: 88 89, on right: 85
groupby_list (263)
    on left: 90 91, on right: 89 91 100
opt_asc_desc (264)
    on left: 92 93 94, on right: 90 91
opt_with_rollup (265)
    on left: 95 96, on right: 89
opt_having (266)
    on left: 97 98, on right: 85
opt_orderby (267)
    on left: 99 100, on right: 85 164 205
opt_limit (268)
    on left: 101 102 103, on right: 85 164 205
opt_into_list (269)
    on left: 104 105, on right: 85
column_list (270)
    on left: 106 107, on right: 105 107 153 187 229 230 231 242
select_opts (271)
    on left: 108 109 110 111 112 113 114 115 116, on right: 84 85 109
    110 111 112 113 114 115 116
select_expr_list (272)
    on left: 117 118 119 120, on right: 84 85 118
select_expr (273)
    on left: 121, on right: 117 118
opt_as_alias (274)
    on left: 122 123 124, on right: 121 129 130
table_references (275)
    on left: 125 126, on right: 85 126 132 169 174 205
table_reference (276)
    on left: 127 128, on right: 125 126 135 136 137 138 139
table_factor (277)
    on left: 129 130 131 132, on right: 127 135 136 137 138 139
opt_as (278)
    on left: 133 134, on right: 131 288
join_table (279)
    on left: 135 136 137 138 139, on right: 128
opt_inner_cross (280)
    on left: 140 141 142, on right: 135
opt_outer (281)
    on left: 143 144, on right: 138 148 149
left_or_right (282)
    on left: 145 146, on right: 138
opt_left_or_right_outer (283)
    on left: 147 148 149, on right: 139
opt_join_condition (284)
    on left: 150 151, on right: 135
join_condition (285)
    on left: 152 153, on right: 138 151
index_hint (286)
    on left: 154 155 156 157, on right: 129 130
opt_for_join (287)
    on left: 158 159, on right: 155 156 157
index_list (288)
    on left: 160 161, on right: 155 156 157 161
table_subquery (289)
    on left: 162, on right: 131
delete_stmt (290)
    on left: 164 169 174, on right: 163
delete_opts (291)
    on left: 165 166 167 168, on right: 164 165 166 167 169 174
delete_list (292)
    on left: 170 171, on right: 169 171 174
opt_dot_star (293)
    on left: 172 173, on right: 170 171
insert_stmt (294)
    on left: 176 194 199, on right: 175
opt_ondupupdate (295)
    on left: 177 178, on right: 176 194 199 201 202 203
insert_opts (296)
    on left: 179 180 181 182 183, on right: 176 180 181 182 183 194
    199 201 202 203 207 208
opt_into (297)
    on left: 184 185, on right: 176 194 199 201 202 203
opt_col_names (298)
    on left: 186 187, on right: 176 199 201 203
insert_vals_list (299)
    on left: 188 189, on right: 176 189 201
insert_vals (300)
    on left: 190 191 192 193, on right: 188 189 192 193
insert_asgn_list (301)
    on left: 195 196 197 198, on right: 178 194 197 198 202
replace_stmt (302)
    on left: 201 202 203, on right: 200
update_stmt (303)
    on left: 205, on right: 204
update_opts (304)
    on left: 206 207 208, on right: 205
update_asgn_list (305)
    on left: 209 210 211 212, on right: 205 211 212
create_database_stmt (306)
    on left: 214 215, on right: 213
opt_if_not_exists (307)
    on left: 216 217, on right: 214 215 219 220 221 222 223 224
create_table_stmt (308)
    on left: 219 220 221 222 223 224, on right: 218
opt_temporary (309)
    on left: 225 226, on right: 219 220 221 222 223 224
create_col_list (310)
    on left: 227 228, on right: 219 220 221 222 228
create_definition (311)
    on left: 229 230 231 232 233, on right: 227 228
column_atts (312)
    on left: 234 235 236 237 238 239 240 241 242 243 244 245, on right:
    233 235 236 237 238 239 240 241 242 243 244 245
opt_length (313)
    on left: 246 247 248, on right: 257 258 259 260 261 262 263 264
    265 266 272 274
opt_binary (314)
    on left: 249 250, on right: 280 281 282 283
opt_uz (315)
    on left: 251 252 253, on right: 252 253 258 259 260 261 262 263
    264 265 266
opt_csc (316)
    on left: 254 255 256, on right: 255 256 272 273 280 281 282 283
    284 285
data_type (317)
    on left: 257 258 259 260 261 262 263 264 265 266 267 268 269 270
    271 272 273 274 275 276 277 278 279 280 281 282 283 284 285, on right:
    233
enum_list (318)
    on left: 286 287, on right: 284 285 287
create_select_statement (319)
    on left: 288, on right: 221 222 223 224
opt_ignore_replace (320)
    on left: 289 290 291, on right: 288
set_stmt (321)
    on left: 293, on right: 292
set_list (322)
    on left: 294 295, on right: 293 295
set_expr (323)
    on left: 296 297, on right: 294 295


State 0

    0 $accept: . stmt_list $end

    error    shift, and go to state 1
    CREATE   shift, and go to state 2
    DELETE   shift, and go to state 3
    INSERT   shift, and go to state 4
    REPLACE  shift, and go to state 5
    SELECT   shift, and go to state 6
    SET      shift, and go to state 7
    UPDATE   shift, and go to state 8

    stmt_list             go to state 9
    stmt                  go to state 10
    select_stmt           go to state 11
    delete_stmt           go to state 12
    insert_stmt           go to state 13
    replace_stmt          go to state 14
    update_stmt           go to state 15
    create_database_stmt  go to state 16
    create_table_stmt     go to state 17
    set_stmt              go to state 18


State 1

    3 stmt_list: error . ';'

    ';'  shift, and go to state 19


State 2

  214 create_database_stmt: CREATE . DATABASE opt_if_not_exists NAME
  215                     | CREATE . SCHEMA opt_if_not_exists NAME
  219 create_table_stmt: CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  220                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  221                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  223                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  224                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 20
    SCHEMA     shift, and go to state 21
    TEMPORARY  shift, and go to state 22

    $default  reduce using rule 225 (opt_temporary)

    opt_temporary  go to state 23


State 3

  164 delete_stmt: DELETE . delete_opts FROM NAME opt_where opt_orderby opt_limit
  169            | DELETE . delete_opts delete_list FROM table_references opt_where
  174            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 168 (delete_opts)

    delete_opts  go to state 24


State 4

  176 insert_stmt: INSERT . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  194            | INSERT . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  199            | INSERT . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 179 (insert_opts)

    insert_opts  go to state 25


State 5

  201 replace_stmt: REPLACE . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  202             | REPLACE . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  203             | REPLACE . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 179 (insert_opts)

    insert_opts  go to state 26


State 6

   84 select_stmt: SELECT . select_opts select_expr_list
   85            | SELECT . select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 108 (select_opts)

    select_opts  go to state 27


State 7

  293 set_stmt: SET . set_list

    USERVAR  shift, and go to state 28

    set_list  go to state 29
    set_expr  go to state 30


State 8

  205 update_stmt: UPDATE . update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 206 (update_opts)
    '('       reduce using rule 206 (update_opts)
    $default  reduce using rule 179 (insert_opts)

    insert_opts  go to state 31
    update_opts  go to state 32


State 9

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt ';'
    4          | stmt_list . error ';'

    $end     shift, and go to state 33
    error    shift, and go to state 34
    CREATE   shift, and go to state 2
    DELETE   shift, and go to state 3
    INSERT   shift, and go to state 4
    REPLACE  shift, and go to state 5
    SELECT   shift, and go to state 6
    SET      shift, and go to state 7
    UPDATE   shift, and go to state 8

    stmt                  go to state 35
    select_stmt           go to state 11
    delete_stmt           go to state 12
    insert_stmt           go to state 13
    replace_stmt          go to state 14
    update_stmt           go to state 15
    create_database_stmt  go to state 16
    create_table_stmt     go to state 17
    set_stmt              go to state 18


State 10

    1 stmt_list: stmt . ';'

    ';'  shift, and go to state 36


State 11

   83 stmt: select_stmt .

    $default  reduce using rule 83 (stmt)


State 12

  163 stmt: delete_stmt .

    $default  reduce using rule 163 (stmt)


State 13

  175 stmt: insert_stmt .

    $default  reduce using rule 175 (stmt)


State 14

  200 stmt: replace_stmt .

    $default  reduce using rule 200 (stmt)


State 15

  204 stmt: update_stmt .

    $default  reduce using rule 204 (stmt)


State 16

  213 stmt: create_database_stmt .

    $default  reduce using rule 213 (stmt)


State 17

  218 stmt: create_table_stmt .

    $default  reduce using rule 218 (stmt)


State 18

  292 stmt: set_stmt .

    $default  reduce using rule 292 (stmt)


State 19

    3 stmt_list: error ';' .

    $default  reduce using rule 3 (stmt_list)


State 20

  214 create_database_stmt: CREATE DATABASE . opt_if_not_exists NAME

    IF  shift, and go to state 37

    $default  reduce using rule 216 (opt_if_not_exists)

    opt_if_not_exists  go to state 38


State 21

  215 create_database_stmt: CREATE SCHEMA . opt_if_not_exists NAME

    IF  shift, and go to state 37

    $default  reduce using rule 216 (opt_if_not_exists)

    opt_if_not_exists  go to state 39


State 22

  226 opt_temporary: TEMPORARY .

    $default  reduce using rule 226 (opt_temporary)


State 23
